# ChangeLog for dev-util/aegis
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/aegis/ChangeLog,v 1.23 2008/01/27 10:15:36 grobian Exp $

  27 Jan 2008; Fabian Groffen <grobian@gentoo.org> aegis-4.9.ebuild,
  aegis-4.19.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing karltk from metadata.xml as per #200332. Assigning to
  maintainer-needed.

  09 Apr 2007; Doug Goldstein <cardoe@gentoo.org> aegis-4.9.ebuild,
  aegis-4.11.ebuild, aegis-4.16.ebuild:
  Fix bug #17808 for all versions

  14 Jan 2007; Andrej Kacian <ticho@gentoo.org> aegis-4.19.ebuild:
  Stable on x86, bug #161742.

  12 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> aegis-4.19.ebuild:
  Stable on sparc wrt #161742

  12 Jan 2007; Christian Faulhammer <opfer@gentoo.org> aegis-4.19.ebuild:
  fix for bug 17808: split tcltk USE flag into tk and tcl

  16 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> aegis-4.19.ebuild:
  Replace root:root in root:0. Bug #103563.

  29 Oct 2005; Fabian Groffen <grobian@gentoo.org> aegis-4.19.ebuild:
  Marked ~ppc-macos (bug #109954)

  02 Nov 2004; Karl Trygve Kalleberg <karltk@gentoo.org> aegis-4.19.ebuild:
  New upstream version. Fixes #69059.

  30 Apr 2004; David Holm <dholm@gentoo.org> aegis-4.16.ebuild:
  Added to ~ppc.

*aegis-4.16 (30 Apr 2004)

  30 Apr 2004; Karl Trygve Kalleberg <karltk@gentoo.org>
  aegis-4.16.ebuild: New upstream version. Removed 4.4 and 4.7.

  24 Feb 2004; Sven Blumenstein <bazik@gentoo.org> aegis-4.9.ebuild:
  KEYWORDS+=sparc

  08 Dec 2003; Karl Trygve Kalleberg <karltk@gentoo.org> aegis-4.11.ebuild,
  aegis-4.9.ebuild, aegis-4.7.ebuild, aegis-4.4.ebuild:
  The ebuild now users proper chown syntax. Fixes aegis in #35127.
    
*aegis-4.11 (16 Nov 2003)

  16 Nov 2003; Karl Trygve Kalleberg <karltk@gentoo.org> aegis-4.11.ebuild:
  New upstream version. Fixes #28432. Added metadata.xml. 
  