@@ -1,8 +1,10 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/aegis/aegis-4.19.ebuild,v 1.8 2008/06/30 01:43:53 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/aegis/aegis-4.24.ebuild,v 1.1 2008/06/30 01:43:53 darkside Exp $
 
 EAPI="prefix"
+
+inherit autotools
 
 IUSE="tk"
 
@@ -14,12 +16,23 @@ DEPEND="sys-libs/zlib
 	sys-devel/gettext
 	sys-apps/groff
 	sys-devel/bison
+	dev-libs/libxml2
 	tk? ( >=dev-lang/tk-8.3 )"
 RDEPEND="" #221421
 
 SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="~x86-linux ~ppc-macos"
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+
+	#FIXME: ? Not sure what effect this has. Only way to get it to compile.
+	sed -i 's/$(SH) etc\/compat.2.3//' Makefile.in || \
+		die "sed Makefile.in failed"
+	eautomake || die "eautomake failed"
+}
 
 src_compile() {
 	# By default aegis configure puts shareable read/write files (locks etc)
@@ -29,11 +42,10 @@ src_compile() {
 
 	econf \
 		--sharedstatedir="${EPREFIX}"/var/lib/aegis \
-		--with-nlsdir="${EPREFIX}"/usr/share/locale \
-		|| die "./configure failed"
+		${myconf} || die "./configure failed"
 
 	# Second ebuild causes redefined/undefined function errors
-	make clean
+#	make clean
 
 	# not emake safe, I think
 	make || die
@@ -42,23 +54,17 @@ src_compile() {
 src_install () {
 	make RPM_BUILD_ROOT="${D}" install || die
 
-	# Alas gentoo appears to have no profile.d mechanism, so:
-	rm "${ED}"/etc/profile.d/aegis.sh
-	rm "${ED}"/etc/profile.d/aegis.csh
-	rmdir "${ED}"/etc/profile.d
-	rmdir "${ED}"/etc
-
 	# OK so ${ED}/var/lib/aegis gets UID=3, but for some
 	# reason so do the files under /usr/share, even though
 	# they are read-only.
-	use prefix || chown -R root:0 "${ED}"/usr/share
+	use prefix || chown -R root:root "${ED}"/usr/share
 	dodoc lib/en/*
 
 	# Link to share dir so user has a chance of noticing it.
 	dosym /usr/share/aegis /usr/share/doc/${PF}/scripts
 
 	# Config file examples are documentation.
-	mv "${ED}"/usr/share/aegis/config.example "${ED}"/usr/share/doc/${PF}/
+	mv "${ED}"/usr/share/aegis/config.example "${ED}"/usr/share/doc/"${PF}"/
 
-	dodoc BUILDING MANIFEST README
+	dodoc BUILDING README
 }
